모바일 갤러리형 게시판 작업

--- a/src/main/webapp/css/board/boardWrite.css
+++ b/src/main/webapp/css/board/boardWrite.css
@@ -138,3 +138,10 @@ textarea {
     line-height: 44px;
     padding-left: 10px;
 }
+
+@media screen and (max-width: 1300px) {
+    form .max-layout-width {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
+}
