--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -2300,11 +2300,25 @@ body .section07 .bx-pager-link span + span {
 
 @media screen and (max-width: 828px) {
     .footer, .footer .fp-tableCell {
-        height: 72px !important;
+        height: 66px !important;
     }
 }
 
 @media screen and (max-width: 768px) {
+    .section05 .big-img .cont01 .img {
+    background: url(../images/main/docter03_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont02 .img {
+    background: url(../images/main/docter01_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont03 .img {
+    background: url(../images/main/docter02_m.jpg) no-repeat;
+    background-size: contain;
+}
 
     .main-footer {
         display: none !important;
@@ -2625,6 +2639,21 @@ display: block;
 }
 
 @media screen and (max-width:582px) {
+    .section05 .big-img .cont01 .img {
+    background: url(../images/main/docter03_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont02 .img {
+    background: url(../images/main/docter01_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont03 .img {
+    background: url(../images/main/docter02_m.jpg) no-repeat;
+    background-size: contain;
+}
+
     .section01 .text h2 {
         font-size: 30px;
     }
@@ -2643,6 +2672,20 @@ display: block;
 }
 
 @media screen and (max-width: 640px) {
+    .section05 .big-img .cont01 .img {
+    background: url(../images/main/docter03_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont02 .img {
+    background: url(../images/main/docter01_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont03 .img {
+    background: url(../images/main/docter02_m.jpg) no-repeat;
+    background-size: contain;
+}
     .section01 .img01 {
         background: url(../images/main/img_main01_m.jpg) no-repeat;
         background-size: cover;
@@ -2752,12 +2795,12 @@ display: block;
     }
     .community .etc .reserve h2 {
         margin-bottom: -9px;
-        font-size: 25px;
+        font-size: 23px;
         letter-spacing: -1px;
     }
     .community .etc .reserve {
         width: 100%;
-        height: 114px;
+        height: 110px;
     }
     .community .etc .reserve a {
         padding-top: 50px;
@@ -2773,8 +2816,22 @@ display: block;
 }
 
 @media screen and (max-width:550px) {
+    .section05 .big-img .cont01 .img {
+    background: url(../images/main/docter03_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont02 .img {
+    background: url(../images/main/docter01_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont03 .img {
+    background: url(../images/main/docter02_m.jpg) no-repeat;
+    background-size: contain;
+}
     .footer-info-container, .footer-info-container .fp-tableCell {
-        height: 480px !important;
+        height: 411px !important;
     }
 }
 
@@ -2814,18 +2871,18 @@ display: block;
         margin-bottom: 41px;
     }
     .case .case-slider h3 {
-        font-size: 20px;
+        font-size: 18px;
         padding-top: 17px;
     }
     .case .case-slider p {
         font-size: 15px;
-        margin-top: 9px;
+        margin-top: 6px;
     }
     .section07 h5 {
-        font-size: 22px;
+        font-size: 21px;
         word-break: keep-all;
         margin-top: 36px;
-        margin-bottom: 14px;
+        margin-bottom: 10px;
     }
 
     .section07 .module {
@@ -2930,9 +2987,9 @@ display: block;
 }
 
 .community .online h2 {
-    font-size: 26px;
+    font-size: 24px;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
     letter-spacing: -1.5px;
 }
 
@@ -2957,8 +3014,23 @@ display: block;
 }
 
 @media screen and (max-width:414px) {
+    .section05 .big-img .cont01 .img {
+    background: url(../images/main/docter03_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont02 .img {
+    background: url(../images/main/docter01_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont03 .img {
+    background: url(../images/main/docter02_m.jpg) no-repeat;
+    background-size: contain;
+}
+
     .section05 .text .title span:first-child {
-    font-size: 35px;
+    font-size: 33px;
     margin-right: 13px;
 }
 
@@ -3017,7 +3089,7 @@ display: block;
         padding: 20px 24px;
     }
     .community .community-container > div {
-        height: 226px;
+        height: 223px;
     }
     .slide-item {
         width: 174px;
@@ -3080,7 +3152,7 @@ display: block;
         height: 95px;
     }
     .community .etc ul li h2 {
-        font-size: 17px;
+        font-size: 16px;
         letter-spacing: -1px;
     }
     .community .etc .reserve p {
@@ -3089,7 +3161,7 @@ display: block;
         letter-spacing: -1px;
     }
     .community .etc .reserve a {
-        padding-left: 24px;
+        padding-left: 27px;
         padding-top: 30px;
     }
     .community .online a {
@@ -3215,12 +3287,18 @@ display: block;
     text-align: center;
     line-height: 40px;
     color: #fff;
-    margin-top: -40px;
+    margin-top: -79px;
     font-size: 15px;
 }
 
 }
 
+@media screen and (max-width:414px) {
+.footer-info-container, .footer-info-container .fp-tableCell {
+    height: 469px !important;
+}
+
+}
 @media screen and (max-width:400px) {
     .section01 .text h2 {
         font-size: 26px;
@@ -3251,6 +3329,40 @@ display: block;
 }
 
 @media screen and (max-width:375px) {
+
+    .section05 .big-img .cont01 .img {
+    background: url(../images/main/docter03_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont02 .img {
+    background: url(../images/main/docter01_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.section05 .big-img .cont03 .img {
+    background: url(../images/main/docter02_m.jpg) no-repeat;
+    background-size: contain;
+}
+
+.footer-info-container, .footer-info-container .fp-tableCell {
+    height: 449px !important;
+}
+
+    .case .more {
+    width: 142px;
+    height: 43px;
+    box-sizing: border-box;
+    border: 2px solid #666668;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 40px;
+    color: #fff;
+    margin-top: -44px;
+    font-size: 15px;
+}
+
     .section01 .slide-item {
     padding-top: 0px;
      }
@@ -3319,5 +3431,12 @@ display: block;
     }
     .slide-item {
         width: 140px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .fp-nav {
+        width: 0;
+        right: 42px;    
     }
 }
