--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -490,6 +490,7 @@ section {
     .section06 .section-text {
         padding-right: 30px;
         word-break: keep-all;
+        margin-top: 1px;
     }
     .section06 .section-title {
         word-break: keep-all;
@@ -514,13 +515,13 @@ section {
         display: block;
         overflow: hidden;
         margin-left: 0;
-        padding: 0 15px;
-        box-sizing: border-box
+        padding: 0 5px;
+        box-sizing: border-box;
     }
     .section05 ul li {
         width: 33.33333333333%;
         margin-left: 0;
-        padding: 0 15px;
+        padding: 0px 9px;
         box-sizing: border-box;
     }
     .container {
@@ -549,16 +550,18 @@ section {
     }
     .section02 .img01, .section04 .img01, .section03 .img01 {
         width: 100%;
-        height: 344px;
+        height: 270px;
     }
     .section02 .text-box, .section04 .text-box, .section03 .text-box {
-        padding-top: 414px;
+        padding-top: 312px;
     }
     .section02 .section-title, .section04 .section-title, .section03 .section-title {
         width: 100%;
     }
     .section02 .text-box h2 + p, .section04 .text-box h2 + p {
         width: 100%;
+        margin-top: 0px;
+        margin-bottom: 19px;
     }
     .section03 .text-box {
         padding-left: 0;
@@ -566,21 +569,35 @@ section {
 }
 
 @media screen and (max-width:640px) {
+    .section06 {
+    margin-top: 31px;
+}
+
+    .section03{
+    margin-top: 0px;
+    margin-bottom: -126px;
+}
+    .section02 {
+        margin-top: 0px;
+}
     .section01  {
         background: url(../../images/sub/info/intro/intro01_m.jpg) no-repeat top;
     }
     .section06 .text > div:first-child .section-title {
-        font-size: 32px;
+        font-size: 28px;
     }
     .section06 .max-layout-width {
-        padding-bottom: 100px;
+        padding-bottom: 73px;
     }
     .last-text {
-        margin-top: 600px
+        margin-top: 384px;
+        padding-left: 30px;
     }
     .section06 .text > div.img_bg {
         position: absolute;
-        top: 90px;
+        top: 69px;
+        height: 294px;
+        width: 100%;
     }
     .section06 .bg {
         display: none;
@@ -590,36 +607,41 @@ section {
         padding-right: 0;
     }
     .section06 .text > div:first-child:after {
-        bottom: -20px;
+        bottom: -9px;
         left: 50%;
-        width: 56px;
-        height: 6px;
+        width: 45px;
+        height: 5px;
         top: auto;
         margin-left: -28px;
     }
     .section06 .text > div {
         float: none;
         width: 100%;
-        padding-left: 30px;
+        /* padding-left: 30px; */
     }
     .section01 .text-box {
         padding-left: 0;
         padding: 0 30px;
-        padding-top: 80px;
+        padding-top: 84px;
         background: #9a8b7e;
     }
     .section01 .section-title {
 
-    }
+font-size: 28px;
+
+margin-top: -33px;
+
+}
     .section01 .max-layout-width {
-        padding-top: 399px;
+        padding-top: 339px;
     }
     .section01 .last-section-title:after {
         display: none;
     }
     .section01 .text-box h2 + p {
-        margin-top: 34px;
-        padding-bottom: 70px;
+        margin-top: 5px;
+        padding-bottom: 51px;
+        line-height: 1.5;
     }
     .section01 .move-title {
         display: none;
@@ -627,9 +649,10 @@ section {
 
     .section01 {
         height: auto;
+        margin-top: 38px;
     }
     .section02 .section-title {
-        font-size: 34px;
+        font-size: 28px;
     }
     .section05 ul li {
         width: 50%;
@@ -642,7 +665,9 @@ section {
 
 @media screen and (max-width:518px) {
     .section05 {
-        padding-bottom: 50px;
+        padding-bottom: 27px;
+        margin-top: -158px;
+        padding-top: 69px;
     }
     .image-container h5 span {
         font-size: 30px;
@@ -667,14 +692,17 @@ section {
         overflow: hidden;
     }
     .section05 .section-title:before {
-        width: 64px;
+        width: 56px;
         height: 56px;
         background-size: contain;
         background-repeat: no-repeat;
+        margin-left: -70px;
+        top: 6px;
     }
     .section05 .section-title {
-        font-size: 30px;
+        font-size: 28px;
         margin-right: -84px;
+        margin-bottom: 36px;
     }
     .section05 .image-container li > div {
         height: 106px;
@@ -682,18 +710,28 @@ section {
 }
 
 @media screen and (max-width:375px) {
+
+    h2.section-title.last-section-title{
+        font-size:28px;
+    }
+
+    h2.section-title.last-section-title{
+        
+    }
+
     .section05 .image-container li > div {
-        height: 94px;
+        height: 113px;
     }
     .image-container h5 span {
         font-size: 28px;
     }
     .section05 .container p {
         font-size: 14px;
-        margin-top: 14px;
+        margin-top: 7px;
     }
     .image-container h5 {
-        font-size: 35px;
+        font-size: 29px;
+        margin-top: 19px;
     }
     .section05 ul li {
         margin-bottom: 35px;
