--- a/src/main/webapp/css/member/memberAgreement.css
+++ b/src/main/webapp/css/member/memberAgreement.css
@@ -46,5 +46,12 @@
 }
 
 .privacy {
-    margin-top: 10px;
+    margin-top: 40px;
+}
+
+@media screen and (max-width: 1300px) {
+    .agreement {
+        padding: 0 30px;
+        box-sizing: border-box;
+    }
 }
