--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -517,21 +517,40 @@ section.board-link ul li {
     padding-top: 265px;
 }
 
-.board-link ul li:first-child {
+.board-link ul li {
+    position: relative;
+    overflow: hidden;
+}
+
+.board-link ul li:before {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    transition: all .3s ease;
+}
+
+.board-link ul li:hover:before {
+    transform: scale(1.1);
+}
+
+.board-link ul li:first-child:before {
     background: url(../images/sub/implant/digital/digital20.jpg) no-repeat top center;
 }
 
-.board-link ul li.center-img {
+.board-link ul li.center-img:before {
     background: url(../images/sub/implant/digital/digital21.jpg) no-repeat top center;
 }
 
-.board-link ul li.last-img {
+.board-link ul li.last-img:before {
     background: url(../images/sub/implant/digital/digital22.jpg) no-repeat top center;
 }
 
 .board-link ul li p {
     height: 56px;
-    background: #9b8b7e;
+    background: #0e1621;
     padding-left: 42px;
     padding-right: 35px;
     text-align: left;
@@ -855,24 +874,24 @@ section.board-link ul li {
 
 @media screen and (max-width: 640px) {
     .sub-page-title {
-    font-size: 30px;
-    font-weight: 400;
-    margin-bottom: 13px;
-    margin-top: 40px;
-    text-align: center;
-    letter-spacing: -2px;
-}
+        font-size: 30px;
+        font-weight: 400;
+        margin-bottom: 13px;
+        margin-top: 40px;
+        text-align: center;
+        letter-spacing: -2px;
+    }
 
-.sub-page-intro {
-    font-size: 13px;
-    text-align: center;
-    letter-spacing: 5px;
-    color: #ddd;
-    width: 39px;
-    height: 5px;
-    background: #9b8b7e;
-    text-indent: -9999px;
-  }
+    .sub-page-intro {
+        font-size: 13px;
+        text-align: center;
+        letter-spacing: 5px;
+        color: #ddd;
+        width: 39px;
+        height: 5px;
+        background: #9b8b7e;
+        text-indent: -9999px;
+    }
 
     div.sub {
         padding-top: 0;
